# macropad

./: AGENTS.md  Cargo.toml  README.md
.claude/commands/: build-flash.md  commit.md
.claude/skills/: circuitpython-macropad.md
hid-logger/: Cargo.toml
hid-logger/src/: main.rs
python/: README.md  bootstrap.sh
python/src/: code.py
python/src/effects/: rainbow.py
python/src/input/: encoder.py
python/src/screens/: __init__.py  manager.py
rust/: Cargo.toml  README.md  bootstrap.sh  macropad.uf2
rust/.cargo/: config.toml
rust/src/: main.rs
src/: code.py
src/effects/: __init__.py
src/input/: __init__.py  keys.py
