[package]
name = "macropad"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "macropad"
bench = false
test = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", optional = true }
rp2040-boot2 = { version = "0.3.0", optional = true }
rp2040-hal = "0.9.1"
adafruit-macropad = "0.7.0"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
ws2812-pio = "0.7.0"
smart-leds = "0.3.0"
fugit = "0.3.7"

[features]
default = ["boot2", "rt", "critical-section-impl", "rom-func-cache"]
critical-section-impl = ["rp2040-hal/critical-section-impl"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt", "rp2040-hal/rt"]
rp2040-e5 = ["rp2040-hal/rp2040-e5"]
rom-func-cache = ["rp2040-hal/rom-func-cache"]

[profile.release]
debug = 2
lto = true
opt-level = "s"
