[package]
name = "macropad"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "macropad"
bench = false
test = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"] }
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
ws2812-pio = "0.8"
smart-leds = "0.3"
fugit = "0.3.7"
sh1106 = "0.5"
embedded-graphics = "0.8"
usb-device = "0.3"
usbd-human-interface-device = "0.5"
usbd-serial = "0.2"
frunk = { version = "0.4", default-features = false }
critical-section = "1.1"
heapless = "0.8"

[profile.release]
debug = 2
lto = true
opt-level = "s"
